# maya

./: .gitignore  Gonzo.cpp  README.md
AreaLightTest/: Test.2.ma  Test.ma
ArnoldTests/: GlobalIlluminationTest1.mb  ShrinkRoom.ma  Table.mb
ArnoldTests/.mayaSwatches/: Table.mb.swatches
PbrtTests/: AreaLightTest.ma  pbrt.exe.DESKTOP-10VJUQN.gonso.log.INFO.20170127-014218.37508
PbrtTests/pbrt/: batchRender.bat
PbrtTests/pbrt/0001/: AreaLightTest.0001.geo.pbrt  AreaLightTest.0001.pbrt  myScene1.0001.geo.pbrt  myScene1.0001.pbrt
plugin/: CMakeLists.txt  Gonzo.cpp  Schronzo.py
